force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__AdditionalLocationDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdditionalLocationDescription__c</fullName>
    <label>Additional Location Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdditionalLocationDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>