force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__RegulatoryAuthorityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryAuthorityId__c</fullName>
    <label>Regulatory Authority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryAuthorityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>