force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__rel_1719818455526_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818455526_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuthorizationApplication_SiteAddress_rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>AuthorizationApplication_SiteAddress_rel</relationshipLabel>
    <relationshipName>rel_1719818455526_end</relationshipName>
    <type>Lookup</type>
</CustomField>