force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__rel_1719818622940_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818622940_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuthorizationApplication_Application_rel</label>
    <referenceTo>ssot__Application__dlm</referenceTo>
    <relationshipLabel>AuthorizationApplication_Application_rel</relationshipLabel>
    <relationshipName>rel_1719818622940_end</relationshipName>
    <type>Lookup</type>
</CustomField>