force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__rel_1719819472151_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819472151_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuthorizationApplication_BusinessTyp_rel</label>
    <referenceTo>ssot__BusinessType__dlm</referenceTo>
    <relationshipLabel>AuthorizationApplication_BusinessTyp_rel</relationshipLabel>
    <relationshipName>rel_1719819472151_end</relationshipName>
    <type>Lookup</type>
</CustomField>