force-app/main/default/objects/ssot__AuthorizationApplication__dlm/fields/ssot__SiteAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteAddressId__c</fullName>
    <label>Site Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>